# viperfish

./: CMakeLists.txt  TODO.md  attack_gen.cpp  attack_gen.hpp  attack_gen_test.cpp  attack_gen_test.hpp  bit_manip.hpp  bit_manip_test.cpp  bit_manip_test.hpp  debug.cpp  move_gen.hpp  move_gen_helper.cpp  move_gen_helper.hpp  test.cpp  utils.hpp
src/: attack_gen.cpp  board_rep.cpp  board_rep.hpp  debug.cpp  engine.cpp  engine.hpp  fen.cpp  fen.hpp  move_gen.hpp  move_gen_helper.hpp  utils.hpp
test/: perft.cpp  perft.hpp  test.cpp
tests/general/: perft2.cpp  perft2.hpp
tests/perft/: epd_parser.cpp  epd_parser.hpp  perft.cpp  perft.hpp  perft_case.hpp  smoke_test.epd  standard_test.epd  stress_test.epd
tests/unit_tests/: king_test.epd  move_gen_tests.cpp  move_gen_tests.hpp  unit_tests.cpp
